hphp/hack/test/typecheck/reified_generics/new_without_newable.php.exp
File "new_without_newable.php", line 13, characters 9-11:
Generics are not allowed in this position. (Typing[4306])
File "new_without_newable.php", line 19, characters 9-11:
Generics are not allowed in this position. (Typing[4306])
File "new_without_newable.php", line 23, characters 9-10:
Generics are not allowed in this position. (Typing[4306])
